Added PyCrypto as a dependency, to more easily choose a random word from wordlist (#238)

--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,5 +1,5 @@
 [DEFAULT]
 Package: onionshare
-Depends: python-flask, python-stem, python-qt4
+Depends: python-flask, python-stem, python-qt4, python-crypto
 Build-Depends: dh-python
 Suite: trusty
